# words-serial-number

./: LICENSE  README.md  SECURITY.md  base.py  pyproject.toml  setup.py
word_lexord/: __init__.py  __main__.py  base.py  lang.py
